Build ordinary executable jar file
Run with java --enable-preview -jar target/cli-1.0-SNAPSHOT.jar after
building.